--- a/app/src/main/res/layout/match_header.xml
+++ b/app/src/main/res/layout/match_header.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="@string/base_team_victory"
         android:textAllCaps="true"
+        android:layout_marginTop="4dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +35,7 @@
         android:layout_marginEnd="12dp"
         android:text="@string/base_number"
         android:textSize="20sp"
+        android:textColor="@color/radiant_green"
         app:layout_constraintEnd_toStartOf="@+id/tv_match_time"
         app:layout_constraintTop_toBottomOf="@+id/tv_winner" />
 
@@ -43,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:text="@string/base_number"
+        android:textColor="@color/dire_red"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/tv_match_time"
         app:layout_constraintTop_toTopOf="@+id/tv_radiant_kills" />
