--- a/app/src/main/res/layout/team_player_item.xml
+++ b/app/src/main/res/layout/team_player_item.xml
@@ -2,16 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:background="@color/background_test">
+    android:layout_height="40dp">
 
     <ImageView
         android:id="@+id/iv_hero"
         android:layout_width="56dp"
         android:layout_height="32dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:src="@drawable/tinker"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,14 +18,16 @@
 
     <TextView
         android:id="@+id/tv_player_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/player"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="6dp"
+        android:gravity="center_vertical"
+        android:maxWidth="140dp"
+        android:text="@string/player"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_kills"
         app:layout_constraintStart_toEndOf="@+id/iv_hero"
-        app:layout_constraintTop_toTopOf="parent"
-        android:maxWidth="140dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_net"
@@ -42,27 +43,46 @@
         android:id="@+id/tv_assists"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
         android:text="@string/base_number"
-        app:layout_constraintEnd_toStartOf="@+id/tv_net"
+        app:layout_constraintEnd_toStartOf="@+id/gl_1"
         app:layout_constraintTop_toTopOf="@+id/tv_net" />
 
     <TextView
         android:id="@+id/tv_deaths"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
         android:text="@string/base_number"
-        app:layout_constraintEnd_toStartOf="@+id/tv_assists"
+        app:layout_constraintEnd_toStartOf="@+id/gl_2"
         app:layout_constraintTop_toTopOf="@+id/tv_assists" />
 
     <TextView
         android:id="@+id/tv_kills"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
         android:text="@string/base_number"
-        app:layout_constraintEnd_toStartOf="@+id/tv_deaths"
+        app:layout_constraintEnd_toStartOf="@+id/gl_3"
         app:layout_constraintTop_toTopOf="@+id/tv_deaths" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="70dp" />
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="100dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="130dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
