--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@android:color/transparent"/>
+    <solid android:color="@android:color/transparent" />
     <stroke
         android:width="1dp"
-        android:color="#000000">
-    </stroke>
+        android:color="#000000"></stroke>
 </shape>
