--- a/app/src/main/res/layout/fragment_favorite_matches.xml
+++ b/app/src/main/res/layout/fragment_favorite_matches.xml
@@ -2,12 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_matches"
@@ -16,6 +18,9 @@
             tools:listitem="@layout/search_player_item"
             tools:itemCount="10" />
 
+
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
 
 </RelativeLayout>
