--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,32 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Switch
-        android:id="@+id/s_theme"
+    <CheckBox
+        android:id="@+id/checkbox_dark_theme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="UseSwitchCompatOrMaterialXml" />
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_dark_theme"
+        app:layout_constraintTop_toTopOf="@+id/tv_dark_theme"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
     <TextView
+        android:id="@+id/tv_dark_theme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Темная тема"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/s_theme"
-        app:layout_constraintStart_toEndOf="@+id/s_theme"
-        app:layout_constraintTop_toTopOf="@+id/s_theme" />
-
-    <TextView
-        android:id="@+id/tv_settings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/settings"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        android:text="@string/dark_theme"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
