--- a/app/src/main/res/layout/team_header_detail_item.xml
+++ b/app/src/main/res/layout/team_header_detail_item.xml
@@ -12,6 +12,7 @@
         android:layout_marginBottom="2dp"
         android:layout_marginTop="6dp"
         android:text="@string/the_dire"
+        android:textStyle="bold"
         android:textColor="@color/radiant_green"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
