--- a/app/src/main/res/menu/top_app_bar_base.xml
+++ b/app/src/main/res/menu/top_app_bar_base.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_more"
-        android:contentDescription="@string/more"
-        android:title="@string/settings"
-        app:showAsAction="never" />
+<!--    <item-->
+<!--        android:id="@+id/action_more"-->
+<!--        android:contentDescription="@string/more"-->
+<!--        android:title="@string/settings"-->
+<!--        app:showAsAction="never" />-->
 
 </menu>
