--- a/app/src/main/res/layout/favorite_player_item.xml
+++ b/app/src/main/res/layout/favorite_player_item.xml
@@ -26,6 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
+                android:minWidth="0dp"
                 android:text="@string/nickname"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -53,7 +54,7 @@
                 android:text="@string/ranked"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/tv_nickname"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/tv_nickname"
                 app:layout_constraintTop_toBottomOf="@id/tv_nickname" />
 
